force-app/main/default/objects/Semantic_Registry__c/Semantic_Registry__c.object-meta.xml
<CustomObject>
    <label>Semantic Registry</label>
    <nameField>
        <displayFormat>SR-{000000}</displayFormat>
        <label>Semantic Registry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Semantic Registries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>