force-app/main/default/objects/Semantic_Registry__c/fields/Business_Logic_Rules__c.field-meta.xml
<CustomField>
    <fullName>Business_Logic_Rules__c</fullName>
    <label>Business Logic Rules</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>