force-app/main/default/objects/Semantic_Registry__c/fields/Context_Tag__c.field-meta.xml
<CustomField>
    <fullName>Context_Tag__c</fullName>
    <label>Context Tag</label>
    <length>100</length>
    <type>Text</type>
    <description>Optional agent context discriminator (e.g. Enterprise, SMB, JP, Support). Allows the same entity to have multiple active definitions scoped to different agent contexts.</description>
</CustomField>