force-app/main/default/objects/Semantic_Registry__c/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <label>Entity Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DLO</fullName>
                <default>true</default>
                <label>DLO (Data Lake Object)</label>
            </value>
            <value>
                <fullName>DMO</fullName>
                <label>DMO (Data Model Object)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>