force-app/main/default/objects/Semantic_Registry__c/fields/Target_DMO__c.field-meta.xml
<CustomField>
    <fullName>Target_DMO__c</fullName>
    <label>Target DMO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>