force-app/main/default/objects/Semantic_Registry__c/fields/Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Verified_By__c</fullName>
    <label>Verified By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Semantic Registries</relationshipLabel>
    <relationshipName>Semantic_Registries</relationshipName>
    <type>Lookup</type>
</CustomField>