force-app/main/default/objects/Semantic_Registry__c/fields/Verified_Field_Mappings_JSON__c.field-meta.xml
<CustomField>
    <fullName>Verified_Field_Mappings_JSON__c</fullName>
    <label>Verified Field Mappings JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>